2024CR709	7/2/2024	MikeR	Feature	Deprecation - Change new Locale( to Locale.pf( in all apps 2024CR710	7/2/2024	MikeR	Feature	Deprecation - Change new URL(u)  new URI(u).toURL()